[project]
name = "alpaca-options"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LaoShihChieh", email = "66504390+LaoShihChieh@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "alpaca-py>=0.43.4",
    "httpx>=0.28.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typer>=0.25.1",
    "yfinance>=1.4.0",
]

[project.scripts]
alpaca-options = "alpaca_options:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
